Updated my html and css files

--- a/index.html
+++ b/index.html
@@ -45,12 +45,6 @@
           I'm a student studying software engineering at Bluecrest University
           College
         </p>
-        <p class="text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum a
-          distinctio quibusdam, aliquid non accusantium. At cum maiores iusto
-          enim? Atque aspernatur sequi debitis cupiditate iste assumenda
-          officiis, tenetur eligendi!
-        </p>
         <a href="#about" class="btn">about me</a>
       </div>
       <div class="image">
@@ -71,15 +65,12 @@
         </div>
 
         <div class="content">
-          <h3>
-            My name is Emile Bee & I'm a junior student at Bluecrest University
-            OpenLabs.
-          </h3>
+          <h3>I'm a junior student at Bluecrest University OpenLabs.</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Repellendus incidunt ea, alias velit recusandae dolores corporis
-            mollitia eligendi! Qui corporis iusto, consequuntur praesentium
-            tempora earum corrupti enim voluptate pariatur expedita.
+            My name is Lawrence Emile Bee, I'm a Liberian. I study Software
+            Engineering at one of the pretigous college in Liberia. I'm
+            commited, hardworking, smart, but most of all I am always willing to
+            learn new things
           </p>
           <div class="box-container">
             <div class="box">
@@ -138,7 +129,7 @@
         <div class="box-container">
           <div class="box">
             <h3>>> 2+</h3>
-            <p>years of educational experience</p>
+            <p>years of experience</p>
           </div>
         </div>
       </div>
@@ -165,7 +156,7 @@
         <div class="icons">
           <i class="fas fa-map-marker-alt"></i>
           <h3>my address</h3>
-          <p>mount barclay, Monterrado, monrovia, liberia</p>
+          <p>Mount Barclay, Monterrado, Monrovia, Liberia</p>
         </div>
       </div>
 
@@ -182,7 +173,7 @@
             cols="30"
             rows="10"
           ></textarea>
-          <input type="submit" class="btn" value="send message" />
+          <a class="btn">send message</a>
         </form>
       </div>
     </section>
